# amoeba2

./: .gitattributes  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
amoeba2/: __init__.py  _version.py  absorption_model.py  amoeba.py  data.py  emission_absorption_model.py  model.py  physics.py  simulate.py  tau_model.py  tb_tau_model.py  utils.py
docs/: requirements.txt
docs/source/: amoeba2.rst  conf.py  index.rst  modules.rst
docs/source/notebooks/: absorption_model.ipynb  example_data.pkl  optimization.ipynb  real_data.ipynb  tau_model  tau_model.ipynb  tb_tau_model  tb_tau_model.ipynb
tests/: test_absorption_model.py  test_emission_absorption_model.py  test_physics.py  test_tau_model.py  test_tb_tau_model.py  test_utils.py
